# pastel-math

./: .gitignore  CMakeLists.txt
PastelMath/Vector/: Vec2.hpp  Vec3.hpp  Vec4.hpp  VecBase.hpp
cmake/: PastelMathConfig.cmake.in
test/: CMakeLists.txt  VecTest.cpp
